Deployment_files/HeartbeatingEFM/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  customer1-ingress
  namespace: heartbeat
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-set-header: "X-Forwarded-Host $host"
spec:
  rules:
  - host: heartbeatingefm.com
    http:
      paths:
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: customer1-nginx-service
            port:
              number: 80
      - path: /heartbeat
        pathType: Prefix
        backend:
          service:
            name: customer1-nginx-service
            port:
              number: 80
      - path: /acknowledge
        pathType: Prefix
        backend:
          service:
            name: customer1-nginx-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer1-nginx-service
            port:
              number: 80
